feat: suggestions on the query interface are now handled by a backend service
