# api/src/route/suggestions.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import suggestionsController from "../controller/suggestions";
+
+const router = Router();
+
+router.get("/", suggestionsController);
+
+export default router;
